tests/positive/basic/readfile_empty/input.ci
void main() {
    writeFile("empty.txt", "");
    print("<" + readFile("empty.txt") + ">\n");
}
