tests/negative/runtime/readfile_directory/input.ci
void main() {
    print(readFile(".") + "\n");
}
